--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -86,6 +86,8 @@ main {
 }
 
 .listItem {
+  border-radius: 10px;
+  box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.3);
   position: relative;
   border: 0.1rem solid #333;
   margin: 3rem;
@@ -97,6 +99,15 @@ main {
 .listItemDetails {
   justify-content: space-between;
   margin-top: 1rem;
+}
+
+.blueButton {
+  background-color: navy;
+  color: #fff;
+  border: none;
+  padding: 1rem;
+
+  cursor: pointer;
 }
 
 .listItemButton {
@@ -114,4 +125,26 @@ main {
 
 .listItemButton:hover {
   background-color: #2f2feb;
+}
+
+.createProductForm {
+  border: 0.1rem solid #333;
+  border-radius: 10px;
+  box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.3);
+  padding: 5rem;
+  margin: 5rem;
+  height: 50vh;
+  position: relative;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.formInputContainer label {
+  font-size: 2rem;
+  margin-right: 2rem;
+}
+
+.createProductForm button {
+  font-size: 1.8rem;
+  padding: 1.8rem;
 }
